# cs490-project

./: .gitignore  README.md  TECHNICAL_README.md  ploting.py  pyproject.toml  scraper.py  tox.ini
app/: page_eda.py  page_prediction.py  page_scraping.py  page_training.py  streamlit_app.py  ui_utils.py
data/: best_pipeline_dataset_1782049477_price.pkl  best_pipeline_dataset_1782421732_price.pkl  best_pipeline_dataset_1782421732_price_per_m2.pkl  dataset_1782049477.csv  dataset_1782421732.csv  metadata.json
notebooks/: analysis.ipynb
pres/: package.json  pnpm-lock.yaml  slides.md
src/: config.py  plotting.py  predict.py  preprocessing.py  scraper.py  train_model.py  ui_utils.py
tests/: README.md  conftest.py  test_data_validation.py  test_prediction.py  test_preprocessing.py  test_property_types.py  test_training.py
